--- a/valueselectorlib/build.gradle
+++ b/valueselectorlib/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.mehdi-salehi'
 
 android {
     compileSdkVersion 24
@@ -25,56 +28,62 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
 }
 
-uploadArchives {
-    repositories.mavenDeployer {
-        pom.groupId = 'com.narvancomputer'
-        pom.artifactId = 'ValueSelectorLib'
-        pom.version = '1.0.0'
-        // Add other pom properties here if you want (developer details / licenses)
-        repository(url: "file:///c:/test/")
-    }
-}
+//uploadArchives {
+//    repositories.mavenDeployer {
+//        pom.groupId = 'com.github.mehdi-salehi'
+//        pom.artifactId = 'ValueSelectorLib'
+//        pom.version = '1.0.0'
+//        // Add other pom properties here if you want (developer details / licenses)
+//        repository(url: "file:///c:/test/")
+//    }
+//}
+//
+//task androidJavadocs(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//}
+//
+//task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+//    classifier = 'javadoc'
+//    from androidJavadocs.destinationDir
+//}
+//
+//task androidSourcesJar(type: Jar) {
+//    classifier = 'sources'
+//    from android.sourceSets.main.java.srcDirs
+//}
+//
+//artifacts {
+//    archives androidSourcesJar
+//    archives androidJavadocsJar
+//}
 
-task androidJavadocs(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
+//ext {
+//    bintrayRepo = 'maven'
+//    bintrayName = 'ValueSelectorLib'
+//
+//    publishedGroupId = 'https://github.com/mehdi-salehi/ValueSelectorLib'
+//    libraryName = 'ValueSelectorLib'
+//    artifact = 'valueselectorlib'
+//
+//    libraryDescription = 'Numeric TextView with add & minus btn for android'
+//
+//    siteUrl = 'https://github.com/mehdi-salehi/ValueSelectorLib'
+//    gitUrl = 'https://github.com/mehdi-salehi/ValueSelectorLib.git'
+//
+//    libraryVersion = '1.0.0'
+//
+//    developerId = 'mehdi-salehi'
+//    developerName = 'mehdi salehi'
+//    developerEmail = 'meh2fari@gmail.com'
+//    orgName = 'NarvanComputer'
+//
+//    licenseName = 'AGPL-V3'
+//    licenseUrl = 'http://www.opensource.org/licenses/agpl-v3.html'
+//    allLicenses = ["AGPL-V3"]
+//}
 
-task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    classifier = 'javadoc'
-    from androidJavadocs.destinationDir
-}
-
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.srcDirs
-}
-
-artifacts {
-    archives androidSourcesJar
-    archives androidJavadocsJar
-}
-
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'ValueSelectorLib'
-
-    publishedGroupId = 'com.narvancomputer'
-    libraryName = 'ValueSelectorLib'
-    artifact = 'ValueSelectorLib'
-
-    libraryDescription = 'Numeric TextView with add & minus btn'
-
-    siteUrl = 'https://github.com/mehdi-salehi/ValueSelectorLib'
-    gitUrl = 'https://github.com/mehdi-salehi/ValueSelectorLib.git'
-
-    libraryVersion = '1.0.0'
-
-    developerId = 'mehdi-salehi'
-    developerName = 'mehdi salehi'
-    developerEmail = 'meh2fari@gmail.com'
-
-    licenseName = 'AGPL-V3'
-    licenseUrl = 'http://www.opensource.org/licenses/agpl-v3.html'
-    allLicenses = ["AGPL-V3"]
-}
+//if (project.rootProject.file('local.properties').exists()) {
+//    apply from: rootProject.file('gradle/install-v1.gradle')
+//    apply from: rootProject.file('gradle/bintray-android-v1.gradle')
+//}
